# fortress-ai

./: .env.example  .gitignore  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_DIAGRAM.md  CORPORATE_SECURITY_ANALYSIS.md  FINAL_DEMO_SCRIPT.md  LLM_FIREWALL_ENHANCEMENT.md  PROJECT_PLAN.md  QUICKSTART.md  README.md  README_EXP.md  README_VISUAL.md  SIMPLE_ARCHITECTURE.md  demo_llm_attacks.ps1  docker-compose.yml  test-system.bat  test_banking_system.py  test_llm_firewall.py
agent/: Dockerfile  app.py  banking_agent.py
agent-standalone/: .env  .env.example  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt  test_agent.py
agent-standalone/mock-gateway/: Dockerfile  app.py  requirements.txt
agent/config/: preapproved_payees.json
broker/: Dockerfile  README.md  app.py  banking_utils.py  firewall.py  jwt_utils.py  pyproject.toml  requirements-llm.txt  requirements.txt
broker/config/: banking_policy.json
broker/data/: broker_log.jsonl
data/: .gitkeep  a10_control_log.jsonl  gateway_log.jsonl  incidents.jsonl
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  README.md
fortress-ai-frontend/: README_FRONTEND.md  index.html  package-lock.json  package.json  start-frontend.bat
fortress-ai-frontend/src/: App.jsx  index.css
gateway/: Dockerfile  app.py  banking_security.py  behavior_dna.py  requirements.txt  threat_scoring.py
gateway/config/: banking_network.json
security-layer/: .env.security.example  README.md  docker-compose.security.yml  quick-start.md
security-layer/gateway/: Dockerfile  app.py  compliance.py  pyproject.toml  requirements.txt
(+22 files in other folders)
